js get picture data

--- a/hub/src/static/HTML/hub.html
+++ b/hub/src/static/HTML/hub.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/bootstrap-grid.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
-    <script defer href="../JS/main.js"></script>
+    <script defer src="../JS/main.js"></script>
 </head>
 <body>
     <header class="hub__header">
