--- a/hub/src/static/HTML/rendered.html
+++ b/hub/src/static/HTML/rendered.html
@@ -14,7 +14,7 @@
         <div class="container-fluid hub__header__container">
             <a href="#">                    
                 <div class="header__logo-inside flex">
-                    <img src="../IMG/1681561064_papik-pro-p-rudn-logotip-vektor-33.svg" fill="#0570b8" class = "logo">
+                    <img class="hub__application__icon" src="../IMG/1681561064_papik-pro-p-rudn-logotip-vektor-33.svg" fill="#0570b8" class = "logo">
                 </div>
             </a>
             <div class="hub__header__container__links">
@@ -24,12 +24,57 @@
             </div>
         </div>
     </header>
-    <main>        
-        <div class="container-fluid hub__main__container">
+    <main>
+        <div class="container hub__main__container">
             <h1 class="hub__main__container__header"> Хаб приложений РУДН</h1>
             <div class="container-fluid hub__main__container-inside" id="application-container">
 
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/half-life.512x506.png">
+                <span>Application 1</span>
             </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/keepass.512x506.png">
+                <span>Application 2</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/krita.512x506.png">
+                <span>Application 3</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/microsoft-teams.512x506.png">
+                <span>Application 4</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/ms-powerpoint.512x506.png">
+                <span>Application 5</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/ms-word.512x506.png">
+                <span>Application 6</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/playstation.512x506.png">
+                <span>Application 7</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/portal.512x506.png">
+                <span>Application 8</span>
+            </div>
+
+            <div class="hub__application__space">
+                <img class="hub__application__icon" src="../HTML/placeholder_icons/visual-studio-code.512x506.png">
+                <span>Application 9</span>
+            </div>
+        </div>
+
         </div>
     </main>
     <footer class="footer">
